--- a/src/components/noteform/NoteForm.module.css
+++ b/src/components/noteform/NoteForm.module.css
@@ -11,3 +11,49 @@
 }
 
 
+
+.form-heading {
+    padding: 20px;
+    font-size: 22px;
+}
+
+.form-main-section {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 0px 35px;
+}
+
+
+.group-input {
+    display: flex;
+    gap: 20px;
+    justify-content: flex-start;
+    align-items: center;
+}
+.group-input-box {
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    text-indent: 10px;
+    width: 300px;
+    height: 30px;
+}
+
+.submit-button {
+    background-color: black;
+    border-radius: 8px;
+    color: white;
+    padding: 5px 30px;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
+
+
+.color-circle{
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-color: #B38BFA;
+}
