--- a/src/components/sidebar/SideBar.module.css
+++ b/src/components/sidebar/SideBar.module.css
@@ -1,3 +1,35 @@
+.sidebar-wrapper {
+    height: 100vh;
+    width: 32vw;
+    background-color: #fff;
+    overflow: scroll;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+    margin-left: 2rem;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.sidebar-heading {
+
+    font-size: 1.5rem;
+    color: 'black';
+    margin: 1.5rem 1rem;
+}
+
+.sidebar-wrapper::-webkit-scrollbar {
+    scroll-behavior: smooth;
+    display: none;
+}
+
+
+
+
 .groupBox {
     display: flex;
     align-items: center;
@@ -11,4 +43,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+
+.button-create-group {
+    width: 15rem;
+    height: 2rem;
+    color: white;
+    background-color: black;
+    border-radius: 50px;
+    font-size: 1rem;
 }
