added resposive features for mobile for sidebar

--- a/src/components/pocketNotes/pocketnotes.module.css
+++ b/src/components/pocketNotes/pocketnotes.module.css
@@ -24,3 +24,10 @@
     bottom: 20px;
     position: absolute;
 }
+
+
+@media (max-width : 900px){
+    .wrapper-home{
+        display: none;
+    }
+}
