--- a/src/components/noteform/NoteForm.module.css
+++ b/src/components/noteform/NoteForm.module.css
@@ -14,7 +14,7 @@
 
 .form-heading {
     padding: 20px;
-    font-size: 22px;
+    font-size: 1.2rem;
 }
 
 .form-main-section {
@@ -31,6 +31,7 @@
     justify-content: flex-start;
     align-items: center;
 }
+
 .group-input-box {
     border: 2px solid #ccc;
     border-radius: 20px;
@@ -51,9 +52,49 @@
 
 
 
-.color-circle{
+.color-circle {
     height: 25px;
     width: 25px;
     border-radius: 50%;
     background-color: #B38BFA;
+}
+
+
+@media (max-width : 900px) {
+    .formWrapper {
+        left: 20%;
+        width: 400px;
+
+
+    }
+
+    .font-heading {
+        font-size: 1rem;
+    }
+
+    .group-input-box {
+        width: 200px;
+    }
+}
+
+@media (max-width : 500px) {
+    .formWrapper {
+        left: 20%;
+        width: 350px;
+
+        font-size: 0.9rem;
+    }
+
+    
+
+    .group-input-box {
+        width: 150px;
+    }
+    .color-circle{
+        height: 15px;
+        width: 15px;
+    }
+    .formWrapper {
+        left: 5%;
+    }
 }
