--- a/src/components/noteform/NoteForm.module.css
+++ b/src/components/noteform/NoteForm.module.css
@@ -5,9 +5,11 @@
     z-index: 7;
     border-radius: 6px;
     background-color: #FFF;
-    position: fixed;
-    left: 35%;
-    top: 30%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 48%;
+    top: 50%;
+    margin : auto;
 }
 
 
@@ -62,9 +64,14 @@
 
 @media (max-width : 900px) {
     .formWrapper {
-        left: 20%;
-        width: 400px;
+       
 
+        width: 350px;
+        margin :auto;
+        font-size: 0.9rem;
+        top : 50%;
+        left : 50%;
+        transform: translate(-50%,-50%);
 
     }
 
@@ -79,10 +86,13 @@
 
 @media (max-width : 500px) {
     .formWrapper {
-        left: 20%;
+        /* left: 5%; */
         width: 350px;
-
+        margin :auto;
         font-size: 0.9rem;
+        top : 50%;
+        left : 50%;
+        transform: translate(-50%,-50%);
     }
 
     
