--- a/src/components/Chats/chats.module.css
+++ b/src/components/Chats/chats.module.css
@@ -49,7 +49,6 @@
     display: flex;
     flex-direction: column;
     /*align-items: flex-end;*/
-
     /*justify-content: flex-end;*/
     overflow: scroll;
 
@@ -63,10 +62,11 @@
 .message {
     width: 100%;
     display: flex;
-    margin: 0 10px;
-    padding: 20px;
+   flex-wrap: wrap; 
+    margin: 10px 10px;
+    padding: 20px ;
     align-items: baseline;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 20px;
     /*background-color: lightcoral;*/
 }
@@ -121,7 +121,10 @@
 }
 
 .chatText {
-    width: 55vw;
+    width: 50vw;
+    
+     word-wrap: break-word;
+    /* background-color: green; */
 }
 
 @media (max-width : 500px){
