final update for production

--- a/src/components/Chats/chats.module.css
+++ b/src/components/Chats/chats.module.css
@@ -140,7 +140,7 @@
         margin : 35px;
     }
     .buttonEnter img{
-        right : 3rem;
-        bottom : 2rem;
+        bottom : 40px;
+        right : 55px;
     }
 }
