--- a/src/components/noteform/NoteForm.module.css
+++ b/src/components/noteform/NoteForm.module.css
@@ -39,7 +39,9 @@
     border-radius: 20px;
     text-indent: 10px;
     width: 300px;
-    height: 30px;
+    height: 35px;
+    /* padding-left : 20px; */
+    text-indent: 20px;
 }
 
 .submit-button {
